feat: add logging statements
OCD-3538